--- a/ckan/public/base/scss/_alerts.scss
+++ b/ckan/public/base/scss/_alerts.scss
@@ -1,5 +1,5 @@
 // Add this alert class for backwards compatibility, since Bootstrap 3 removed
 // the "alert-error" class, but it has the same properties as "alert-danger".
 .alert-error {
-  @include alert-variant($danger, $danger, $danger);
+    @include alert-variant($errorBackground, $errorBorder, $errorText);
 }
